force-app/main/default/objects/Mystery_Order__c/Mystery_Order__c.object-meta.xml
<CustomObject>
    <label>Mystery Order</label>
    <nameField>
        <displayFormat>MO-{0000000000}</displayFormat>
        <label>Mystery Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mystery Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>