force-app/main/default/objects/Mystery_Order__c/fields/Amount_refunded__c.field-meta.xml
<CustomField>
    <fullName>Amount_refunded__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>Amount refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>