force-app/main/default/objects/Mystery_Order__c/fields/Buyback_Mystery_Order__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Mystery_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyback Mystery Order</label>
    <type>Checkbox</type>
</CustomField>