force-app/main/default/objects/Mystery_Order__c/fields/Client_s_account__c.field-meta.xml
<CustomField>
    <fullName>Client_s_account__c</fullName>
    <label>Client&apos;s account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>