force-app/main/default/objects/Mystery_Order__c/fields/Comment_if_archived__c.field-meta.xml
<CustomField>
    <fullName>Comment_if_archived__c</fullName>
    <label>Comment if archived</label>
    <type>TextArea</type>
</CustomField>