force-app/main/default/objects/Mystery_Order__c/fields/Comment_of_aborted_MO__c.field-meta.xml
<CustomField>
    <fullName>Comment_of_aborted_MO__c</fullName>
    <label>Comment of aborted MO</label>
    <type>TextArea</type>
</CustomField>