force-app/main/default/objects/Mystery_Order__c/fields/Counterfeit__c.field-meta.xml
<CustomField>
    <fullName>Counterfeit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Counterfeit</label>
    <type>Checkbox</type>
</CustomField>