force-app/main/default/objects/Mystery_Order__c/fields/Current_BizDev__c.field-meta.xml
<CustomField>
    <fullName>Current_BizDev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current BizDev</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mystery_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>