force-app/main/default/objects/Mystery_Order__c/fields/Current_QAM__c.field-meta.xml
<CustomField>
    <fullName>Current_QAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current QAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mystery_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>