force-app/main/default/objects/Mystery_Order__c/fields/Declare_counteirfeit__c.field-meta.xml
<CustomField>
    <fullName>Declare_counteirfeit__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <label>Declare counteirfeit</label>
    <type>Checkbox</type>
</CustomField>