force-app/main/default/objects/Mystery_Order__c/fields/Has_been_aborted_on__c.field-meta.xml
<CustomField>
    <fullName>Has_been_aborted_on__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>Has been aborted on</label>
    <type>Date</type>
</CustomField>