force-app/main/default/objects/Mystery_Order__c/fields/Has_been_archived_on__c.field-meta.xml
<CustomField>
    <fullName>Has_been_archived_on__c</fullName>
    <label>Has been archived on</label>
    <type>Date</type>
</CustomField>