force-app/main/default/objects/Mystery_Order__c/fields/Has_been_created_on__c.field-meta.xml
<CustomField>
    <fullName>Has_been_created_on__c</fullName>
    <formula>if(ISBLANK( Has_been_created_on_IMPORT__c ) , DATEVALUE ( CreatedDate ), Has_been_created_on_IMPORT__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has been created on</label>
    <type>Date</type>
</CustomField>