force-app/main/default/objects/Mystery_Order__c/fields/Has_been_created_on_IMPORT__c.field-meta.xml
<CustomField>
    <fullName>Has_been_created_on_IMPORT__c</fullName>
    <label>Has been created on IMPORT</label>
    <type>Date</type>
</CustomField>