force-app/main/default/objects/Mystery_Order__c/fields/Has_been_pushed_to_stand_by_on__c.field-meta.xml
<CustomField>
    <fullName>Has_been_pushed_to_stand_by_on__c</fullName>
    <label>Has been pushed to stand-by on</label>
    <type>Date</type>
</CustomField>