force-app/main/default/objects/Mystery_Order__c/fields/Has_been_received_on__c.field-meta.xml
<CustomField>
    <fullName>Has_been_received_on__c</fullName>
    <label>Has been received on</label>
    <type>Date</type>
</CustomField>