force-app/main/default/objects/Mystery_Order__c/fields/HazardousCharger_Alert__c.field-meta.xml
<CustomField>
    <fullName>HazardousCharger_Alert__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hazardous Charger - Alert</label>
    <referenceTo>Alert__c</referenceTo>
    <relationshipLabel>Mystery Orders</relationshipLabel>
    <relationshipName>Mystery_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>