force-app/main/default/objects/Mystery_Order__c/fields/If_suspicious_why__c.field-meta.xml
<CustomField>
    <fullName>If_suspicious_why__c</fullName>
    <label>If suspicious, why?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>