force-app/main/default/objects/Mystery_Order__c/fields/iLab_internal_notes__c.field-meta.xml
<CustomField>
    <fullName>iLab_internal_notes__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>iLab internal notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>