force-app/main/default/objects/Mystery_Order__c/fields/Lab_zone__c.field-meta.xml
<CustomField>
    <fullName>Lab_zone__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <formula>if(    Merchant_Name__r.RecordType.DeveloperName = &apos;E_U&apos; , &quot;FR&quot;, &quot;US&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lab zone</label>
    <type>Text</type>
</CustomField>