force-app/main/default/objects/Mystery_Order__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <formula>Merchant_Name__r.Language__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language</label>
    <type>Text</type>
</CustomField>