force-app/main/default/objects/Mystery_Order__c/fields/Link_to_merchant_s_boutique__c.field-meta.xml
<CustomField>
    <fullName>Link_to_merchant_s_boutique__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <formula>If ( Lab_zone__c = &quot;US&quot;,HYPERLINK(&quot;https://www.backmarket.com/boutique/&quot; &amp;


SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER( Merchant_Name__r.Name),&quot;,&quot;,&quot;&quot;),&quot; &quot;,&quot;-&quot;),&quot;.&quot;,&quot;&quot;) &amp; 




&quot;-&quot; &amp; TEXT(Merchant_P_K__c) , &quot;Click here&quot;)  ,HYPERLINK(&quot;https://www.backmarket.fr/boutique/&quot; &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER( Merchant_Name__r.Name),&quot;,&quot;,&quot;&quot;),&quot; &quot;,&quot;-&quot;),&quot;.&quot;,&quot;&quot;) &amp; &quot;-&quot; &amp; TEXT(Merchant_P_K__c) , &quot;Click here&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to merchant&apos;s boutique</label>
    <type>Text</type>
</CustomField>