force-app/main/default/objects/Mystery_Order__c/fields/Link_to_order_ID__c.field-meta.xml
<CustomField>
    <fullName>Link_to_order_ID__c</fullName>
    <formula>HYPERLINK(&quot;https://www.backmarket.fr/bo_merchant/admin_tools/orders/?order=&quot;+ Order_ID__c , &quot;Click here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to order ID</label>
    <type>Text</type>
</CustomField>