force-app/main/default/objects/Mystery_Order__c/fields/Link_to_the_MO__c.field-meta.xml
<CustomField>
    <fullName>Link_to_the_MO__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>Link to iAuditor</label>
    <type>Url</type>
</CustomField>