force-app/main/default/objects/Mystery_Order__c/fields/Merchant_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Merchant Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mystery Orders</relationshipLabel>
    <relationshipName>Mystery_Orders1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>