force-app/main/default/objects/Mystery_Order__c/fields/Merchant_P_K__c.field-meta.xml
<CustomField>
    <fullName>Merchant_P_K__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <inlineHelpText>Populated automatically, at MO creation</inlineHelpText>
    <label>Merchant P.K.</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>