force-app/main/default/objects/Mystery_Order__c/fields/MO_motive__c.field-meta.xml
<CustomField>
    <fullName>MO_motive__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>MO motive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suspicion - counterfeit Alert</fullName>
            </value>
            <value>
                <fullName>Suspicion - Hazardous charger Alert</fullName>
            </value>
            <value>
                <fullName>Team Request</fullName>
            </value>
            <value>
                <fullName>MO on Top 20 GMV Sellers</fullName>
            </value>
            <value>
                <fullName>First Sale Check</fullName>
            </value>
            <value>
                <fullName>Flop 10 Sellers on Defective</fullName>
            </value>
            <value>
                <fullName>Technical analysis</fullName>
            </value>
            <value>
                <fullName>Random Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>