force-app/main/default/objects/Mystery_Order__c/fields/MO_performed_by__c.field-meta.xml
<CustomField>
    <fullName>MO_performed_by__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MO performed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mystery_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>