force-app/main/default/objects/Mystery_Order__c/fields/MO_Result__c.field-meta.xml
<CustomField>
    <fullName>MO_Result__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>MO Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>KO</fullName>
            </value>
            <value>
                <fullName>KO no-go</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>