force-app/main/default/objects/Mystery_Order__c/fields/MOP_Alert__c.field-meta.xml
<CustomField>
    <fullName>MOP_Alert__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MOP - Alert</label>
    <referenceTo>Alert__c</referenceTo>
    <relationshipLabel>Mystery Orders (Outcome - Alert)</relationshipLabel>
    <relationshipName>Mystery_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>