force-app/main/default/objects/Mystery_Order__c/fields/Order_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Tracking_Number__c</fullName>
    <label>Order Tracking Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>