force-app/main/default/objects/Mystery_Order__c/fields/Performed_by__c.field-meta.xml
<CustomField>
    <fullName>Performed_by__c</fullName>
    <label>Performed by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>