force-app/main/default/objects/Mystery_Order__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price incl. VAT</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>