force-app/main/default/objects/Mystery_Order__c/fields/Product_category__c.field-meta.xml
<CustomField>
    <fullName>Product_category__c</fullName>
    <label>Product category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smartphone</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>MacBook</fullName>
            </value>
            <value>
                <fullName>AirPods</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Apple Watch</fullName>
            </value>
            <value>
                <fullName>Gaming console</fullName>
            </value>
            <value>
                <fullName>Speakers</fullName>
            </value>
            <value>
                <fullName>Headphone/Earphone</fullName>
            </value>
            <value>
                <fullName>Tablets (Other)</fullName>
            </value>
            <value>
                <fullName>Smartwatch (Other)</fullName>
            </value>
            <value>
                <fullName>Home appliances</fullName>
            </value>
            <value>
                <fullName>Chargers and accessories</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>