force-app/main/default/objects/Mystery_Order__c/fields/Product_designation__c.field-meta.xml
<CustomField>
    <fullName>Product_designation__c</fullName>
    <label>Product designation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>