force-app/main/default/objects/Mystery_Order__c/fields/Product_model_boutique_s_link__c.field-meta.xml
<CustomField>
    <fullName>Product_model_boutique_s_link__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>Product/model boutique&apos;s link</label>
    <type>Url</type>
</CustomField>