force-app/main/default/objects/Mystery_Order__c/fields/Product_or_model_to_test__c.field-meta.xml
<CustomField>
    <fullName>Product_or_model_to_test__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>Specific product/model to test (if any)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>