force-app/main/default/objects/Mystery_Order__c/fields/Reason_for_aborted__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_aborted__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>Reason for aborted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order canceled</fullName>
            </value>
            <value>
                <fullName>Package lost</fullName>
            </value>
            <value>
                <fullName>Package never received</fullName>
            </value>
            <value>
                <fullName>Product is not eligible to MO</fullName>
            </value>
            <value>
                <fullName>Other (specify) - Relaunch new MO</fullName>
            </value>
            <value>
                <fullName>Other (specify) - No new MO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>