force-app/main/default/objects/Mystery_Order__c/fields/Reason_for_failed_MO__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_failed_MO__c</fullName>
    <label>Reason for failed MO</label>
    <type>TextArea</type>
</CustomField>