force-app/main/default/objects/Mystery_Order__c/fields/Reason_for_failure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_failure__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>Reason for failure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leaflet with incentivization to bypass Back Market platform / Flyer avec incitation à contourner la plateforme Back Market</fullName>
            </value>
            <value>
                <fullName>Package is a counterfeit / L&apos;emballage est une contrefaçon</fullName>
            </value>
            <value>
                <fullName>Device prohibited for sales / Produit interdit à la vente</fullName>
            </value>
            <value>
                <fullName>Device stolen / Produit déclaré volé</fullName>
            </value>
            <value>
                <fullName>Device locked / Produit verrouillé</fullName>
            </value>
            <value>
                <fullName>Device does not turn on (despite full charge) / Le produit ne s&apos;allume pas (malgré charge complète)</fullName>
            </value>
            <value>
                <fullName>Data breach (user data not erased) / Infraction données (données utilisateur non effacées)</fullName>
            </value>
            <value>
                <fullName>Uncompatible Network / Incompatibilité réseaux</fullName>
            </value>
            <value>
                <fullName>Charger not conform / Chargeur non conforme</fullName>
            </value>
            <value>
                <fullName>Charger not provided / Chargeur non fourni</fullName>
            </value>
            <value>
                <fullName>Blancco Tests Failed / Echec des tests Blancco</fullName>
            </value>
            <value>
                <fullName>Battery Requirements not conformed / Non conformité aux critères de batterie</fullName>
            </value>
            <value>
                <fullName>Poor Quality Assembly / Mauvaise qualité d&apos;assemblage</fullName>
            </value>
            <value>
                <fullName>Insufficient score (cumulated errors) / Score insuffisant (cumul d&apos;erreurs)</fullName>
            </value>
            <value>
                <fullName>Device damaged / Produit endommagé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>