force-app/main/default/objects/Mystery_Order__c/fields/Reason_for_Stand_by__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Stand_by__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>Reason for Stand-by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Listing is not available</fullName>
            </value>
            <value>
                <fullName>Boutique is not available (=page error)</fullName>
            </value>
            <value>
                <fullName>Seller is offline</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>