force-app/main/default/objects/Mystery_Order__c/fields/Refund_deadline__c.field-meta.xml
<CustomField>
    <fullName>Refund_deadline__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <formula>Has_been_sent_back_on__c + 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund deadline</label>
    <type>Date</type>
</CustomField>