force-app/main/default/objects/Mystery_Order__c/fields/Return_costs__c.field-meta.xml
<CustomField>
    <fullName>Return_costs__c</fullName>
    <label>Return costs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>