force-app/main/default/objects/Mystery_Order__c/fields/Return_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_Tracking_Number__c</fullName>
    <label>Return Tracking Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>