force-app/main/default/objects/Mystery_Order__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To do</fullName>
                <default>true</default>
                <label>To do</label>
            </value>
            <value>
                <fullName>Stand-by</fullName>
            </value>
            <value>
                <fullName>Order made</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Result Shared</fullName>
            </value>
            <value>
                <fullName>Check done</fullName>
            </value>
            <value>
                <fullName>Product sent back</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Archived for BM</fullName>
            </value>
            <value>
                <fullName>Abort MO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>