force-app/main/default/objects/Mystery_Order__c/fields/Suspicion_Hazardous_charger_status__c.field-meta.xml
<CustomField>
    <fullName>Suspicion_Hazardous_charger_status__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>Suspicion - Hazardous charger status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To test</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>