force-app/main/default/objects/Mystery_Order__c/fields/TECH_Loop__c.field-meta.xml
<CustomField>
    <fullName>TECH_Loop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Loop</label>
    <type>Checkbox</type>
</CustomField>