force-app/main/default/objects/Mystery_Order__c/fields/Type_of_merchant__c.field-meta.xml
<CustomField>
    <fullName>Type_of_merchant__c</fullName>
    <label>Type of Mystery Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NMO</fullName>
            </value>
            <value>
                <fullName>Suspicious</fullName>
            </value>
            <value>
                <fullName>Top 20</fullName>
            </value>
            <value>
                <fullName>2nd MO after 1st One Failed</fullName>
            </value>
            <value>
                <fullName>Monitoring Period for Defective</fullName>
            </value>
            <value>
                <fullName>Special Mystery Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>