force-app/main/default/objects/Mystery_Order__c/fields/Us_Mystery_Order__c.field-meta.xml
<CustomField>
    <fullName>Us_Mystery_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US Mystery Order</label>
    <type>Checkbox</type>
</CustomField>