force-app/main/default/objects/Mystery_Order__c/fields/What_type_of_product_do_you_want_to_test__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_product_do_you_want_to_test__c</fullName>
    <label>What type of product do you want to test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>