force-app/main/default/objects/Mystery_Order__c/recordTypes/Mystery_Order.recordType-meta.xml
<RecordType>
    <fullName>Mystery_Order</fullName>
    <active>true</active>
    <label>Mystery Order</label>
</RecordType>