force-app/main/default/objects/Mystery_Order__c/validationRules/VR_AbortedMO.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_AbortedMO</fullName>
    <active>false</active>
    <description>Mandatory fields to move to &quot;Abort MO&quot;</description>
    <errorConditionFormula>AND( ISCHANGED( Stage__c ) ,
ISPICKVAL(Stage__c, &quot;Abort MO&quot;),
  ISBLANK( text( Reason_for_aborted__c  )))</errorConditionFormula>
    <errorMessage>Whooops... To move to &quot;Abort MO&quot; yo need to provide a reason.</errorMessage>
</ValidationRule>