force-app/main/default/objects/Mystery_Order__c/validationRules/VR_ArchivedMO.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ArchivedMO</fullName>
    <active>false</active>
    <description>VR_ArchivedMO</description>
    <errorConditionFormula>AND( ISCHANGED( Stage__c ) ,
ISPICKVAL(Stage__c, &quot;Archived for BM&quot;),
 ISNULL( Comment_if_archived__c ) )</errorConditionFormula>
    <errorDisplayField>Comment_if_archived__c</errorDisplayField>
    <errorMessage>VR_ArchivedMO</errorMessage>
</ValidationRule>