force-app/main/default/objects/Mystery_Order__c/validationRules/VR_New_MO.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_New_MO</fullName>
    <active>true</active>
    <description>Mandatory fields to create a MO</description>
    <errorConditionFormula>AND ( 
ISNEW (),
ISBLANK ( Merchant_Name__c ),
ISNULL( TEXT(MO_motive__c )),
ISNULL ( TEXT( Product_category__c ) ))</errorConditionFormula>
    <errorMessage>Whooops... To create a MO you need to:
1) Assign it to a merchant
2) Populate a MO Motive 
3) Populate a product category</errorMessage>
</ValidationRule>