force-app/main/default/objects/Mystery_Order__c/validationRules/VR_Refunded.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Refunded</fullName>
    <active>true</active>
    <description>The amount f refund is mandatory to move to &quot;Refunded&quot;</description>
    <errorConditionFormula>AND( ISCHANGED( Stage__c ) ,
ISPICKVAL(Stage__c, &quot;Refunded&quot;),
ISNULL( Amount_refunded__c ))</errorConditionFormula>
    <errorMessage>Whooops...The amount f refund is mandatory to move to &quot;Refunded&quot;</errorMessage>
</ValidationRule>