force-app/main/default/objects/Mystery_Order__c/validationRules/VR_Stage_Sent_back.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Stage_Sent_back</fullName>
    <active>true</active>
    <description>List mandatory fields to move to &quot;Product sent back&quot;</description>
    <errorConditionFormula>AND( ISCHANGED( Stage__c ) ,
ISPICKVAL(Stage__c, &quot;Product sent back&quot;),
ISNULL(  Order_Tracking_Number__c  ))</errorConditionFormula>
    <errorMessage>Whoops... A tracking number needs to be populated to change the stage to &quot;Product sent back&quot;.</errorMessage>
</ValidationRule>