force-app/main/default/objects/Mystery_Order__c/validationRules/VR_Stage_StandBy.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Stage_StandBy</fullName>
    <active>true</active>
    <description>Mandatory fields to move to Stand-by</description>
    <errorConditionFormula>AND( ISCHANGED( Stage__c ) ,
ISPICKVAL(Stage__c, &quot;Stand-by&quot;),
ISBLANK( text(  Reason_for_Stand_by__c  )))</errorConditionFormula>
    <errorMessage>Whooops... To move to &quot;Stand-by&quot; you need to provide a reason</errorMessage>
</ValidationRule>