force-app/main/default/objects/Mystery_Order__c/validationRules/VR_SUSPICIOUS.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SUSPICIOUS</fullName>
    <active>false</active>
    <description>You need to fill in the info if suspicious</description>
    <errorConditionFormula>AND( ISPICKVAL( Type_of_merchant__c , &quot;Suspicious&quot;),
 ISBLANK(  What_type_of_product_do_you_want_to_test__c ) ,
 ISBLANK( If_suspicious_why__c ) )</errorConditionFormula>
    <errorDisplayField>If_suspicious_why__c</errorDisplayField>
    <errorMessage>You need to give us more information</errorMessage>
</ValidationRule>