force-app/main/default/objects/Mystery_Order__c/listViews/All_Mystery_Orders.listView-meta.xml
<ListView>
    <fullName>All_Mystery_Orders</fullName>
    <columns>NAME</columns>
    <columns>Merchant_Name__c</columns>
    <columns>Type_of_merchant__c</columns>
    <columns>Has_been_created_on__c</columns>
    <columns>Stage__c</columns>
    <columns>MO_Result__c</columns>
    <columns>Current_QAM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Abort MO</value>
    </filters>
    <label>All Mystery Orders</label>
</ListView>